--- a/backend/package.json
+++ b/backend/package.json
@@ -8,7 +8,9 @@
     "main": "src/app.js",
     "scripts": {
         "test": "echo \"Error: no test specified\" && exit 1",
-        "dev": "node --watch --env-file=.env  src/app.js"
+        "start": "node --env-file=.env src/app.js",
+        "production": "node src/app.js",
+        "dev": "node --watch --env-file=.env src/app.js"
     },
     "dependencies": {
         "bcrypt": "^6.0.0",
