--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "main": "index.js",
     "scripts": {
         "test": "echo \"Error: no test specified\" && exit 1",
-        "build": "cd frontend && npm run build && cd .. && cp -r frontend/dist backend/",
-        "start": "cd backend && npm run start"
+        "build": "cd frontend && npm install && npm run build && cd .. && cp -r frontend/dist backend/",
+        "start": "cd backend && npm install && npm run start",
+        "production": "npm run build && npm run start"
     }
 }
